FastAPI/db.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: nutslove/fastapi-db:v1
        # image: nutslove/fastapi-db:v2
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    nodePort: 30002
