FastAPI/image.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image
  labels:
    app: image
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image
  template:
    metadata:
      labels:
        app: image
    spec:
      containers:
      - name: image
        image: nutslove/fastapi-image:v1
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: image
spec:
  selector:
    app: image
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    nodePort: 30003
